feat(starlark): add pluggable dialect system and new command stubs
Add a pluggable dialect system to the SKY toolchain with interfaces for:
- Classifier: file path -> dialect + file kind classification
- LoadResolver: resolve load() statements to file paths
- BuiltinsProvider: provide signatures and types per dialect
- SemanticValidator: optional validation passes per file kind

Core type definitions:
- FileKind enum (BUILD, bzl, WORKSPACE, MODULE, BUCK, etc.)
- TypeMode enum (Disabled, ParseOnly, Enabled)
- Dialect struct with feature flags and preset configs

New command stubs:
- skycheck: type checker placeholder
- skyrepl: interactive REPL placeholder

Updated sky main to dispatch core commands (fmt, lint, check, query, repl)
to standalone binaries before falling back to the plugin system.

Also adds buildifier_prebuilt dev dependency and applies formatting fixes.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -12,6 +12,8 @@ bazel_dep(name = "rules_go", version = "0.59.0")
 bazel_dep(name = "gazelle", version = "0.47.0")
 bazel_dep(name = "aspect_rules_lint", version = "2.0.0-beta.1")
 
+bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)
+
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
 go_sdk.download(version = "1.24.6")
 go_sdk.nogo(nogo = "//tools/nogo:sky_nogo")
