feat(classifier): add default filename-based classifier
Implements PR #5 using TDD approach with 38 comprehensive test cases.

Classification rules:
- Bazel files: BUILD, BUILD.bazel, *.bzl, WORKSPACE, MODULE.bazel
- Buck2 files: BUCK
- Generic Starlark: *.star, *.skyi
- Unknown: everything else

Features:
- Simple filename and extension-based classification
- No workspace context required (future enhancement)
- Zero allocations in hot path
- Comprehensive test coverage including edge cases
- Benchmark tests for performance validation

Test coverage: 38 test cases covering all file types, edge cases,
case sensitivity, and partial match prevention.

--- a/internal/starlark/classifier/BUILD.bazel
+++ b/internal/starlark/classifier/BUILD.bazel
@@ -1,9 +1,19 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "classifier",
-    srcs = ["classifier.go"],
+    srcs = [
+        "classifier.go",
+        "default.go",
+    ],
     importpath = "github.com/albertocavalcante/sky/internal/starlark/classifier",
     visibility = ["//:__subpackages__"],
+    deps = ["//internal/starlark/filekind"],
+)
+
+go_test(
+    name = "classifier_test",
+    srcs = ["default_test.go"],
+    embed = [":classifier"],
     deps = ["//internal/starlark/filekind"],
 )
