feat(builtins): implement proto-based builtins loader with tests
Add proto schema and loader infrastructure for Starlark builtin definitions.
This is the foundation for PR #6 (proto & JSON builtins loader).

**Proto Schema & Build System:**
- Add builtins.proto schema compatible with bazel-lsp format
- Configure protobuf toolchains (rules_proto 7.1.0, protobuf 33.0, toolchains_protoc 0.4.0)
- Add proto compilation targets in internal/starlark/builtins/proto/

**Proto Loader Implementation:**
- Implement ProtoProvider with thread-safe caching (internal/starlark/builtins/loader/)
- Support both binary (.pb) and text (.pbtxt) proto formats
- Use fsReader interface for testing flexibility (diskFS for runtime, embedFS for tests)
- Smart filename mapping for dialect+filekind combinations

**Extraction Tool:**
- Create extract-bazel-builtins tool to convert bazel-buildtools proto
- Smart context inference for BUILD, BZL, WORKSPACE, MODULE files
- Comprehensive attribute type mapping (20+ Bazel types)

**Comprehensive Test Suite:**
- 1,261 lines of test code with 15 test functions covering 50+ scenarios
- Unit tests for all core functions (parsing, conversion, caching, concurrency)
- Integration tests with realistic proto data
- 3 benchmark tests for performance tracking
- Test fixtures in testdata/proto/ (simple, comprehensive, empty, invalid)
- 4 documentation files (TEST_COVERAGE, TESTING, TEST_SUMMARY, testdata/README)

**Build Infrastructure:**
- Update Makefile: make tidy now uses hermetic Go from rules_go
- Add filegroup for proto data files with proper Bazel integration
- All targets build successfully

This implements the proto-first approach from the plan. JSON loader and
dialect registry will follow in subsequent commits.

--- a/internal/starlark/builtins/BUILD.bazel
+++ b/internal/starlark/builtins/BUILD.bazel
@@ -7,3 +7,12 @@ go_library(
     visibility = ["//:__subpackages__"],
     deps = ["//internal/starlark/filekind"],
 )
+
+filegroup(
+    name = "data",
+    srcs = glob(
+        ["data/proto/**/*.pb", "data/proto/**/*.pbtxt"],
+        allow_empty = True,
+    ),
+    visibility = ["//:__subpackages__"],
+)
