feat(builtins): add extracted proto data from bazel-buildtools
Add 78 Bazel rule definitions extracted from bazel-buildtools:
- 73 BUILD file rules (cc_library, py_binary, java_test, etc.)
- 5 WORKSPACE rules (repository rules)
- 2,216 total parameters with type information

Files generated:
- bazel_build.pb (68 KB)
- bazel_workspace.pb (1.3 KB)
- bazel_bzl.pb (empty, placeholder for Starlark API)
- bazel_module.pb (empty, placeholder for Bzlmod)

Source: /Users/adsc/dev/refs/bazel-buildtools/lang/build-language.pb

--- a/tools/extract-bazel-builtins/BUILD.bazel
+++ b/tools/extract-bazel-builtins/BUILD.bazel
@@ -17,3 +17,63 @@ go_binary(
     embed = [":extract-bazel-builtins_lib"],
     visibility = ["//visibility:public"],
 )
+
+go_binary(
+    name = "inspect",
+    srcs = ["inspect.go"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//internal/starlark/builtins/proto",
+        "@org_golang_google_protobuf//proto",
+    ],
+)
+
+go_binary(
+    name = "inspect-source",
+    srcs = ["inspect_source.go"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "@com_github_bazelbuild_buildtools//build_proto",
+        "@org_golang_google_protobuf//proto",
+    ],
+)
+
+go_binary(
+    name = "inspect-detailed",
+    srcs = ["inspect_detailed.go"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//internal/starlark/builtins/proto",
+        "@org_golang_google_protobuf//proto",
+    ],
+)
+
+go_binary(
+    name = "stats",
+    srcs = ["stats.go"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//internal/starlark/builtins/proto",
+        "@org_golang_google_protobuf//proto",
+    ],
+)
+
+go_binary(
+    name = "source-stats",
+    srcs = ["source_stats.go"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "@com_github_bazelbuild_buildtools//build_proto",
+        "@org_golang_google_protobuf//proto",
+    ],
+)
+
+go_binary(
+    name = "show-rule",
+    srcs = ["show_rule.go"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//internal/starlark/builtins/proto",
+        "@org_golang_google_protobuf//proto",
+    ],
+)
