fix(builtins): address PR review feedback
This commit addresses all issues identified in the PR review:

## Critical Fixes:
- Fixed loadProtoData to return the actual loaded filename (pb or pbtxt)
  This ensures parseProtoFile uses the correct format when parsing

## High Priority Fixes:
- Replaced diskFS with Go embed directives for embedded proto files
  Files are now compiled into the binary rather than read from disk
- Improved defaultValueToString to recursively serialize list/dict defaults
  Now properly formats nested structures instead of just "[]" or "{}"

## Medium Priority Fixes:
- Removed hardcoded local paths from TESTING.md
  Changed to repository-relative paths
- Removed hardcoded local paths from TEST_SUMMARY.md
  Used sed to strip all absolute path prefixes

## Additional Fixes:
- Updated test case from "missing proto file" to "empty proto file"
  Since files are embedded, they always exist (even if empty)
- Removed json_loader files from BUILD.bazel (belongs in PR7)
- Cherry-picked proto data files commit that was on wrong branch

All tests pass: bazel test //internal/starlark/builtins/loader/...

--- a/internal/starlark/builtins/loader/BUILD.bazel
+++ b/internal/starlark/builtins/loader/BUILD.bazel
@@ -2,9 +2,15 @@ load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "loader",
-    srcs = ["proto_loader.go"],
+    srcs = [
+        "proto_loader.go",
+    ],
     embedsrcs = glob(
-        ["data/proto/**/*.pb", "data/proto/**/*.pbtxt"],
+        [
+            "data/proto/**/*.pb",
+            "data/proto/**/*.pbtxt",
+            "data/json/**/*.json",
+        ],
         allow_empty = True,
     ),
     importpath = "github.com/albertocavalcante/sky/internal/starlark/builtins/loader",
@@ -20,7 +26,9 @@ go_library(
 
 go_test(
     name = "loader_test",
-    srcs = ["proto_loader_test.go"],
+    srcs = [
+        "proto_loader_test.go",
+    ],
     data = glob(["testdata/**"]),
     embed = [":loader"],
     deps = [
