--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -9,6 +9,9 @@ module(
 
 bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "rules_go", version = "0.59.0")
+bazel_dep(name = "rules_proto", version = "7.1.0")
+bazel_dep(name = "protobuf", version = "33.0")
+bazel_dep(name = "toolchains_protoc", version = "0.4.0")
 bazel_dep(name = "gazelle", version = "0.47.0")
 bazel_dep(name = "aspect_rules_lint", version = "2.0.0-beta.1")
 
@@ -20,7 +23,7 @@ go_sdk.nogo(nogo = "//tools/nogo:sky_nogo")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
-use_repo(go_deps, "com_github_gofrs_flock", "com_github_kisielk_errcheck", "com_github_tetratelabs_wazero", "com_github_timakin_bodyclose", "org_golang_x_tools")
+use_repo(go_deps, "com_github_bazelbuild_buildtools", "com_github_gofrs_flock", "com_github_google_go_cmp", "com_github_kisielk_errcheck", "com_github_tetratelabs_wazero", "com_github_timakin_bodyclose", "org_golang_google_protobuf", "org_golang_x_tools")
 
 keep_sorted_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", isolate = True)
 keep_sorted_deps.from_file(go_mod = "@aspect_rules_lint//lint/keep-sorted:go.mod")
