--- a/internal/starlark/builtins/loader/BUILD.bazel
+++ b/internal/starlark/builtins/loader/BUILD.bazel
@@ -3,6 +3,8 @@ load("@rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "loader",
     srcs = [
+        "fs.go",
+        "json_loader.go",
         "proto_loader.go",
     ],
     embedsrcs = glob(
@@ -27,6 +29,8 @@ go_library(
 go_test(
     name = "loader_test",
     srcs = [
+        "chain_integration_test.go",
+        "json_loader_test.go",
         "proto_loader_test.go",
     ],
     data = glob(["testdata/**"]),
