feat(skyfmt): implement Starlark formatter using buildtools
Implements skyfmt, a deterministic Starlark formatter that supports all
major Starlark-based tools including Bazel, Buck2, Tilt, Copybara,
Kurtosis, Drone CI, Protoconf, and more.

Features:
- Format from stdin or file paths
- Directory recursion with auto-detection
- Output modes: stdout, -w (write), -d (diff), --check (CI)
- Manual type override with --type flag
- Comprehensive file type support (17+ extensions)

Supported files:
- Exact names: BUILD, WORKSPACE, MODULE.bazel, BUCK, Tiltfile
- Extensions: .bzl, .bxl, .star, .starlark, .sky, .skyi, .axl,
  .ipd, .plz, .pconf, .pinc, .mpconf

--- a/cmd/skyfmt/BUILD.bazel
+++ b/cmd/skyfmt/BUILD.bazel
@@ -5,7 +5,11 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skyfmt",
     visibility = ["//visibility:private"],
-    deps = ["//internal/cli"],
+    deps = [
+        "//internal/starlark/filekind",
+        "//internal/starlark/formatter",
+        "//internal/version",
+    ],
 )
 
 go_binary(
