feat(skylint): implement Starlark linter MVP (#7)
Implement the first milestone of skylint - an extensible Starlark linter
that wraps 99+ buildtools/warn rules with a clean, Go-analyzer-inspired
architecture.

## Features

- **Rule Interface**: Extensible `Rule` type inspired by Go's `analysis.Analyzer`
- **Registry**: Rule management with enable/disable by name, category, or glob pattern
- **Buildtools Adapter**: Wraps all 99+ buildtools/warn rules across 10 categories
- **Driver**: File discovery, AST parsing, and rule execution engine
- **Reporter**: Text output with file grouping and summary statistics
- **CLI**: Full command-line interface with flags

## Rule Categories (99+ rules)

- correctness (32): unused variables, deprecated APIs, uninitialized
- native-rules (42): migration helpers for cc/java/py/proto rules
- documentation (6): module/function docstring requirements
- bazel-api (6): ctx.actions, depset usage patterns
- style (4): print statements, naming conventions
- imports, unused, deprecation, compatibility, control-flow

## CLI Usage

```bash
skylint BUILD.bazel              # Lint files
skylint --list-rules             # Show all rules
skylint --list-categories        # Show categories
skylint --explain=load           # Rule documentation
skylint --disable=native-* .     # Disable by pattern
```

## Architecture

```
CLI (cmd/skylint)
    │
    ▼
Registry (rule management)
    │
    ▼
Driver (file discovery + execution)
    │
    ▼
Buildtools Adapter (99+ wrapped rules)
    │
    ▼
Reporter (text output)
```

This lays the foundation for future milestones:
- M2: Config files, inline suppression, JSON/SARIF output
- M3: Flow analysis rules (starlark-rust inspired)
- M4: Custom rules and plugin system
- M5: Cross-file analysis with Facts

--- a/cmd/skylint/BUILD.bazel
+++ b/cmd/skylint/BUILD.bazel
@@ -5,7 +5,11 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skylint",
     visibility = ["//visibility:private"],
-    deps = ["//internal/cli"],
+    deps = [
+        "//internal/starlark/linter",
+        "//internal/starlark/linter/buildtools",
+        "//internal/version",
+    ],
 )
 
 go_binary(
