feat(skylint): add configuration and output formats (#8)
Implement Milestone 2 of skylint - configuration and output formats.

## New Features

### JSON Output Format (`--format=json`)
- Structured JSON output for CI/CD integration
- Groups findings by file
- Comprehensive summary with counts by severity, rule, and category

### GitHub Actions Format (`--format=github`)
- Native GitHub Actions annotation format
- `::warning file={file},line={line},col={col}::{message}`
- Automatic severity mapping (error/warning/notice)

### Config File Support (`--config`)
- Auto-discovers `.skylint.json` in current and parent directories
- Schema:
  ```json
  {
    "enable": ["all"],
    "disable": ["native-*"],
    "warnings_as_errors": false,
    "rules": {"rule-name": {"severity": "hint"}}
  }
  ```

### Inline Suppression
- `# skylint: disable=rule-name` - suppress on current line
- `# skylint: disable-next-line=rule-name` - suppress next line
- `code()  # skylint: disable=rule` - inline suppression
- Supports multiple rules: `disable=rule1,rule2`
- Supports all rules: `disable=all`

### CLI Enhancements
- `--warnings-as-errors` flag (exit code 1 instead of 2)
- `--config=PATH` for explicit config file

## Files Added
- `internal/starlark/linter/config.go`
- `internal/starlark/linter/reporter_json.go`
- `internal/starlark/linter/reporter_github.go`
- `internal/starlark/linter/suppress.go`

## Files Modified
- `cmd/skylint/main.go` - new flags and format options
- `internal/starlark/linter/driver.go` - suppression integration

--- a/internal/starlark/linter/BUILD.bazel
+++ b/internal/starlark/linter/BUILD.bazel
@@ -3,10 +3,14 @@ load("@rules_go//go:def.bzl", "go_library")
 go_library(
     name = "linter",
     srcs = [
+        "config.go",
         "driver.go",
         "registry.go",
         "reporter.go",
+        "reporter_github.go",
+        "reporter_json.go",
         "rule.go",
+        "suppress.go",
     ],
     importpath = "github.com/albertocavalcante/sky/internal/starlark/linter",
     visibility = ["//:__subpackages__"],
