--- a/internal/starlark/linter/BUILD.bazel
+++ b/internal/starlark/linter/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "linter",
@@ -20,4 +20,16 @@ go_library(
         "//internal/starlark/validator",
         "@com_github_bazelbuild_buildtools//build",
     ],
+)
+
+go_test(
+    name = "linter_test",
+    srcs = [
+        "config_test.go",
+        "reporter_github_test.go",
+        "reporter_json_test.go",
+        "suppress_test.go",
+    ],
+    embed = [":linter"],
+    deps = ["@com_github_google_go_cmp//cmp"],
 )
