feat(skyquery): add CLI and output formatters
Add output formatting package and update skyquery CLI:
- Create internal/starlark/query/output with formatters for name,
  location, json, and count output modes
- Update cmd/skyquery/main.go with full CLI implementation including
  workspace, output format, and keep_going flags
- Add comprehensive tests for all output formats
- Integrate with query engine and index packages

--- a/cmd/skyquery/BUILD.bazel
+++ b/cmd/skyquery/BUILD.bazel
@@ -5,7 +5,12 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skyquery",
     visibility = ["//visibility:private"],
-    deps = ["//internal/cli"],
+    deps = [
+        "//internal/starlark/query",
+        "//internal/starlark/query/index",
+        "//internal/starlark/query/output",
+        "//internal/version",
+    ],
 )
 
 go_binary(
