feat(skyquery): add load graph queries (Phase 2)
Add loadedby() and allloads() functions to query load dependencies:
- loadedby(module) finds files that load a specific module
- allloads(expr) returns all transitive loads for matching files
- LoadGraph type tracks forward/reverse load relationships
- DetectCycles identifies circular load dependencies

The load graph is built lazily when first needed and cached for
subsequent queries.

--- a/internal/starlark/query/BUILD.bazel
+++ b/internal/starlark/query/BUILD.bazel
@@ -19,6 +19,7 @@ go_test(
     srcs = [
         "engine_test.go",
         "funcs_test.go",
+        "loadgraph_test.go",
         "parser_test.go",
         "sets_test.go",
     ],
