feat(skylint): add --fix flag for auto-fixing issues
- Add fix.go with core fix application logic (overlap detection, diff generation)
- Update buildtools adapter to extract fixes from LinterReplacement
- Add --fix and --diff CLI flags to skylint
- Add justfile as modern alternative to Makefile
- Add docs/STARLARK_GO_X_SPEC.md for fork extension specifications
- Reorganize tools/extract-bazel-builtins into subdirectories
- Add generated builtins.pb.go for gopls compatibility

--- a/internal/starlark/builtins/BUILD.bazel
+++ b/internal/starlark/builtins/BUILD.bazel
@@ -11,7 +11,10 @@ go_library(
 filegroup(
     name = "data",
     srcs = glob(
-        ["data/proto/**/*.pb", "data/proto/**/*.pbtxt"],
+        [
+            "data/proto/**/*.pb",
+            "data/proto/**/*.pbtxt",
+        ],
         allow_empty = True,
     ),
     visibility = ["//:__subpackages__"],
