--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -23,7 +23,7 @@ go_sdk.nogo(nogo = "//tools/nogo:sky_nogo")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
-use_repo(go_deps, "com_github_bazelbuild_buildtools", "com_github_gofrs_flock", "com_github_google_go_cmp", "com_github_kisielk_errcheck", "com_github_tetratelabs_wazero", "com_github_timakin_bodyclose", "org_golang_google_protobuf", "org_golang_x_tools")
+use_repo(go_deps, "com_github_bazelbuild_buildtools", "com_github_gofrs_flock", "com_github_google_go_cmp", "com_github_kisielk_errcheck", "com_github_pmezard_go_difflib", "com_github_tetratelabs_wazero", "com_github_timakin_bodyclose", "org_golang_google_protobuf", "org_golang_x_tools")
 
 keep_sorted_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", isolate = True)
 keep_sorted_deps.from_file(go_mod = "@aspect_rules_lint//lint/keep-sorted:go.mod")
