--- a/internal/starlark/linter/BUILD.bazel
+++ b/internal/starlark/linter/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "config.go",
         "driver.go",
+        "fix.go",
         "registry.go",
         "reporter.go",
         "reporter_github.go",
@@ -19,6 +20,7 @@ go_library(
         "//internal/starlark/filekind",
         "//internal/starlark/validator",
         "@com_github_bazelbuild_buildtools//build",
+        "@com_github_pmezard_go_difflib//difflib",
     ],
 )
 
@@ -26,6 +28,7 @@ go_test(
     name = "linter_test",
     srcs = [
         "config_test.go",
+        "fix_test.go",
         "reporter_github_test.go",
         "reporter_json_test.go",
         "suppress_test.go",
