--- a/cmd/skycheck/BUILD.bazel
+++ b/cmd/skycheck/BUILD.bazel
@@ -5,7 +5,10 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skycheck",
     visibility = ["//visibility:private"],
-    deps = ["//internal/cli"],
+    deps = [
+        "//internal/starlark/checker",
+        "//internal/version",
+    ],
 )
 
 go_binary(
