--- a/cmd/skytest/BUILD.bazel
+++ b/cmd/skytest/BUILD.bazel
@@ -1,18 +1,18 @@
 load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
-    name = "skycheck_lib",
+    name = "skytest_lib",
     srcs = ["main.go"],
-    importpath = "github.com/albertocavalcante/sky/cmd/skycheck",
+    importpath = "github.com/albertocavalcante/sky/cmd/skytest",
     visibility = ["//visibility:private"],
     deps = [
-        "//internal/starlark/checker",
+        "//internal/starlark/tester",
         "//internal/version",
     ],
 )
 
 go_binary(
-    name = "skycheck",
-    embed = [":skycheck_lib"],
+    name = "skytest",
+    embed = [":skytest_lib"],
     visibility = ["//visibility:public"],
 )
