--- a/cmd/skyrepl/BUILD.bazel
+++ b/cmd/skyrepl/BUILD.bazel
@@ -5,7 +5,17 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skyrepl",
     visibility = ["//visibility:private"],
-    deps = ["//internal/cli"],
+    deps = [
+        "//internal/version",
+        "@net_starlark_go//lib/json",
+        "@net_starlark_go//lib/math",
+        "@net_starlark_go//lib/time",
+        "@net_starlark_go//repl",
+        "@net_starlark_go//resolve",
+        "@net_starlark_go//starlark",
+        "@net_starlark_go//syntax",
+        "@org_golang_x_term//:term",
+    ],
 )
 
 go_binary(
