refactor: address technical debt across codebase
Multiple improvements to code quality and consistency:

## CLI Tools
- Document why write errors are intentionally ignored (stdout/stderr)
- Add shared exit codes (ExitOK, ExitError, ExitWarning) in internal/cli
- Add shared write helpers (Writef, Writeln, Write, WriteBytes)

## Error Handling
- Replace panic in linter registry with proper error return
- Add error wrapping with context (fmt.Errorf %w) across packages:
  - linter/driver.go, config.go, fix.go
  - formatter/formatter.go
  - docgen/docgen.go

## Code Consolidation
- Move isStarlarkFile to filekind package (single source of truth)
- Remove duplicate implementations from skyfmt and linter/driver

## Modern Go Idioms
- Add sortutil package with generic sorting helpers
- Use slices.SortFunc with cmp.Or for cleaner comparison
- Replace sort.Slice with sortutil.ByName, sortutil.Asc, sortutil.Desc

All tests pass (15/15)

--- a/internal/cli/BUILD.bazel
+++ b/internal/cli/BUILD.bazel
@@ -1,9 +1,19 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "cli",
-    srcs = ["cli.go"],
+    srcs = [
+        "cli.go",
+        "exitcodes.go",
+        "output.go",
+    ],
     importpath = "github.com/albertocavalcante/sky/internal/cli",
     visibility = ["//:__subpackages__"],
     deps = ["//internal/version"],
+)
+
+go_test(
+    name = "cli_test",
+    srcs = ["cli_test.go"],
+    embed = [":cli"],
 )
