feat(skycov): add coverage tool and improve test coverage
## New Features
- Add skycov CLI for coverage reporting
- Support multiple output formats: text, JSON, Cobertura XML, LCOV
- Define Collector interface specifying starlark-go-x instrumentation API
- Demo mode shows sample output when no coverage data provided

## Tests Added
- internal/starlark/coverage: comprehensive tests for data structures
  and all 4 output formats
- internal/starlark/validator: tests for Severity, Diagnostic, Runner
- internal/starlark/resolver: tests for Resolution, ResolverFunc

## Documentation
- Update ROADMAP.md to reflect current tool completion status
- Document starlark-go-x dependencies and priorities

## Fixes
- Fix .gitignore pattern that blocked coverage.go file

Test count: 15 -> 18 (all passing)

--- a/internal/starlark/validator/BUILD.bazel
+++ b/internal/starlark/validator/BUILD.bazel
@@ -1,9 +1,16 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "validator",
     srcs = ["validator.go"],
     importpath = "github.com/albertocavalcante/sky/internal/starlark/validator",
     visibility = ["//:__subpackages__"],
+    deps = ["//internal/starlark/filekind"],
+)
+
+go_test(
+    name = "validator_test",
+    srcs = ["validator_test.go"],
+    embed = [":validator"],
     deps = ["//internal/starlark/filekind"],
 )
