--- a/internal/starlark/resolver/BUILD.bazel
+++ b/internal/starlark/resolver/BUILD.bazel
@@ -1,8 +1,14 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "resolver",
     srcs = ["resolver.go"],
     importpath = "github.com/albertocavalcante/sky/internal/starlark/resolver",
     visibility = ["//:__subpackages__"],
+)
+
+go_test(
+    name = "resolver_test",
+    srcs = ["resolver_test.go"],
+    embed = [":resolver"],
 )
