--- a/docs-website/package.json
+++ b/docs-website/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.6.1",
     "sharp": "^0.34.5",
+    "starlight-links-validator": "^0.19.2",
     "tailwindcss": "^4.1.18"
   }
 }
