refactor(cmd): export Run() from all CLI tools for plugin embedding
Phase 1 of plugin architecture (RFC in docs/RFC-plugin-architecture.md):

- Each tool now exports Run(args) and RunWithIO(ctx, args, stdin, stdout, stderr)
- main.go simplified to just call Run(os.Args[1:])
- Tools remain independently installable via go install
- Enables future embedding into sky binary with build tags

Tools refactored: skylint, skyfmt, skytest, skycheck, skyquery, skyrepl, skydoc, skycov

--- a/internal/starlark/tester/BUILD.bazel
+++ b/internal/starlark/tester/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "tester",
     srcs = [
         "assertions.go",
+        "coverage_hook.go",
         "discovery.go",
         "reporter.go",
         "tester.go",
@@ -11,6 +12,7 @@ go_library(
     importpath = "github.com/albertocavalcante/sky/internal/starlark/tester",
     visibility = ["//:__subpackages__"],
     deps = [
+        "//internal/starlark/coverage",
         "@net_starlark_go//starlark",
         "@net_starlark_go//starlarkstruct",
         "@net_starlark_go//syntax",
