--- a/cmd/skycov/BUILD.bazel
+++ b/cmd/skycov/BUILD.bazel
@@ -2,7 +2,10 @@ load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "skycov_lib",
-    srcs = ["main.go"],
+    srcs = [
+        "main.go",
+        "run.go",
+    ],
     importpath = "github.com/albertocavalcante/sky/cmd/skycov",
     visibility = ["//visibility:private"],
     deps = [
