--- a/cmd/skyquery/BUILD.bazel
+++ b/cmd/skyquery/BUILD.bazel
@@ -2,7 +2,10 @@ load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "skyquery_lib",
-    srcs = ["main.go"],
+    srcs = [
+        "main.go",
+        "run.go",
+    ],
     importpath = "github.com/albertocavalcante/sky/cmd/skyquery",
     visibility = ["//visibility:private"],
     deps = [
