--- a/cmd/skytest/BUILD.bazel
+++ b/cmd/skytest/BUILD.bazel
@@ -2,10 +2,14 @@ load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "skytest_lib",
-    srcs = ["main.go"],
+    srcs = [
+        "main.go",
+        "run.go",
+    ],
     importpath = "github.com/albertocavalcante/sky/cmd/skytest",
     visibility = ["//visibility:private"],
     deps = [
+        "//internal/starlark/coverage",
         "//internal/starlark/tester",
         "//internal/version",
     ],
