feat(sky): add embedded tool support with build tags
Phase 2 of plugin architecture:

- Move tool logic to internal/cmd/* packages (importable)
- Add embedded.go with EmbeddedTool interface
- Add embedded_full.go (sky_full tag) - embeds all tools
- Add embedded_minimal.go (default) - no embedded tools
- Update sky main.go to check embedded tools first

Build modes:
- Default: go build ./cmd/sky (12MB, uses external binaries)
- Full: go build -tags=sky_full ./cmd/sky (18MB, all tools embedded)

Resolution order: embedded → external binary → plugin system

--- a/cmd/sky/BUILD.bazel
+++ b/cmd/sky/BUILD.bazel
@@ -2,7 +2,11 @@ load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "sky_lib",
-    srcs = ["main.go"],
+    srcs = [
+        "embedded.go",
+        "embedded_minimal.go",
+        "main.go",
+    ],
     importpath = "github.com/albertocavalcante/sky/cmd/sky",
     visibility = ["//visibility:private"],
     deps = [
