--- a/cmd/skylint/BUILD.bazel
+++ b/cmd/skylint/BUILD.bazel
@@ -2,17 +2,10 @@ load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "skylint_lib",
-    srcs = [
-        "main.go",
-        "run.go",
-    ],
+    srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skylint",
     visibility = ["//visibility:private"],
-    deps = [
-        "//internal/starlark/linter",
-        "//internal/starlark/linter/buildtools",
-        "//internal/version",
-    ],
+    deps = ["//internal/cmd/skylint"],
 )
 
 go_binary(
