--- a/cmd/skyquery/BUILD.bazel
+++ b/cmd/skyquery/BUILD.bazel
@@ -2,18 +2,10 @@ load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "skyquery_lib",
-    srcs = [
-        "main.go",
-        "run.go",
-    ],
+    srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skyquery",
     visibility = ["//visibility:private"],
-    deps = [
-        "//internal/starlark/query",
-        "//internal/starlark/query/index",
-        "//internal/starlark/query/output",
-        "//internal/version",
-    ],
+    deps = ["//internal/cmd/skyquery"],
 )
 
 go_binary(
