feat: plugin-first architecture with embedded tool support (#29)
* refactor(cmd): export Run() from all CLI tools for plugin embedding

Phase 1 of plugin architecture (RFC in docs/RFC-plugin-architecture.md):

- Each tool now exports Run(args) and RunWithIO(ctx, args, stdin, stdout, stderr)
- main.go simplified to just call Run(os.Args[1:])
- Tools remain independently installable via go install
- Enables future embedding into sky binary with build tags

Tools refactored: skylint, skyfmt, skytest, skycheck, skyquery, skyrepl, skydoc, skycov

* feat(sky): add embedded tool support with build tags

Phase 2 of plugin architecture:

- Move tool logic to internal/cmd/* packages (importable)
- Add embedded.go with EmbeddedTool interface
- Add embedded_full.go (sky_full tag) - embeds all tools
- Add embedded_minimal.go (default) - no embedded tools
- Update sky main.go to check embedded tools first

Build modes:
- Default: go build ./cmd/sky (12MB, uses external binaries)
- Full: go build -tags=sky_full ./cmd/sky (18MB, all tools embedded)

Resolution order: embedded → external binary → plugin system

* docs: update RFC to reflect implemented phases

--- a/cmd/skycov/BUILD.bazel
+++ b/cmd/skycov/BUILD.bazel
@@ -5,10 +5,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skycov",
     visibility = ["//visibility:private"],
-    deps = [
-        "//internal/starlark/coverage",
-        "//internal/version",
-    ],
+    deps = ["//internal/cmd/skycov"],
 )
 
 go_binary(
