--- a/cmd/skycheck/BUILD.bazel
+++ b/cmd/skycheck/BUILD.bazel
@@ -5,10 +5,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skycheck",
     visibility = ["//visibility:private"],
-    deps = [
-        "//internal/starlark/checker",
-        "//internal/version",
-    ],
+    deps = ["//internal/cmd/skycheck"],
 )
 
 go_binary(
