--- a/cmd/skydoc/BUILD.bazel
+++ b/cmd/skydoc/BUILD.bazel
@@ -5,10 +5,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skydoc",
     visibility = ["//visibility:private"],
-    deps = [
-        "//internal/starlark/docgen",
-        "//internal/version",
-    ],
+    deps = ["//internal/cmd/skydoc"],
 )
 
 go_binary(
