--- a/cmd/skylint/BUILD.bazel
+++ b/cmd/skylint/BUILD.bazel
@@ -5,11 +5,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/skylint",
     visibility = ["//visibility:private"],
-    deps = [
-        "//internal/starlark/linter",
-        "//internal/starlark/linter/buildtools",
-        "//internal/version",
-    ],
+    deps = ["//internal/cmd/skylint"],
 )
 
 go_binary(
