feat(build): add Bazel targets and cross-compilation support
- Add sky_full Bazel target (//cmd/sky:sky_full)
- Add justfile recipes for cross-compilation:
  - just build-all: Build sky_full for all platforms
  - just build-linux-amd64, build-linux-arm64
  - just build-darwin-arm64 (Apple Silicon only)
  - just build-windows-amd64
  - just build-all-minimal: Build minimal sky for all platforms
- Add dist/ to .gitignore

Supported platforms (sky_full, ~18MB each):
- Linux AMD64
- Linux ARM64
- macOS ARM64 (Apple Silicon)
- Windows AMD64

--- a/cmd/sky/BUILD.bazel
+++ b/cmd/sky/BUILD.bazel
@@ -1,5 +1,6 @@
 load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
+# Minimal build - no embedded tools
 go_library(
     name = "sky_lib",
     srcs = [
@@ -18,5 +19,35 @@ go_library(
 go_binary(
     name = "sky",
     embed = [":sky_lib"],
+    visibility = ["//visibility:public"],
+)
+
+# Full build - all tools embedded
+go_library(
+    name = "sky_full_lib",
+    srcs = [
+        "embedded.go",
+        "embedded_full.go",
+        "main.go",
+    ],
+    importpath = "github.com/albertocavalcante/sky/cmd/sky",
+    visibility = ["//visibility:private"],
+    deps = [
+        "//internal/cmd/skycheck",
+        "//internal/cmd/skycov",
+        "//internal/cmd/skydoc",
+        "//internal/cmd/skyfmt",
+        "//internal/cmd/skylint",
+        "//internal/cmd/skyquery",
+        "//internal/cmd/skyrepl",
+        "//internal/cmd/skytest",
+        "//internal/plugins",
+        "//internal/version",
+    ],
+)
+
+go_binary(
+    name = "sky_full",
+    embed = [":sky_full_lib"],
     visibility = ["//visibility:public"],
 )
