feat(sky): plugin CLI polish and build improvements
Plugin CLI improvements:
- Add `sky plugin init <name>` command to scaffold new plugins
- Better error messages for unknown commands with suggestions
- Show similar commands using Levenshtein distance

Build improvements (addresses PR #30 feedback):
- Refactor BUILD.bazel to use variables for shared sources/deps
- Reorganize justfile with both Go and Bazel build options:
  - `just dist-*` for Go-based cross-compilation (fast)
  - `just bazel-*` for Bazel builds (hermetic)

--- a/cmd/sky/BUILD.bazel
+++ b/cmd/sky/BUILD.bazel
@@ -1,19 +1,34 @@
 load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
+# Shared sources and dependencies
+_COMMON_SRCS = [
+    "embedded.go",
+    "main.go",
+]
+
+_COMMON_DEPS = [
+    "//internal/plugins",
+    "//internal/version",
+]
+
+_EMBEDDED_TOOL_DEPS = [
+    "//internal/cmd/skycheck",
+    "//internal/cmd/skycov",
+    "//internal/cmd/skydoc",
+    "//internal/cmd/skyfmt",
+    "//internal/cmd/skylint",
+    "//internal/cmd/skyquery",
+    "//internal/cmd/skyrepl",
+    "//internal/cmd/skytest",
+]
+
 # Minimal build - no embedded tools
 go_library(
     name = "sky_lib",
-    srcs = [
-        "embedded.go",
-        "embedded_minimal.go",
-        "main.go",
-    ],
+    srcs = _COMMON_SRCS + ["embedded_minimal.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/sky",
     visibility = ["//visibility:private"],
-    deps = [
-        "//internal/plugins",
-        "//internal/version",
-    ],
+    deps = _COMMON_DEPS,
 )
 
 go_binary(
@@ -25,25 +40,10 @@ go_binary(
 # Full build - all tools embedded
 go_library(
     name = "sky_full_lib",
-    srcs = [
-        "embedded.go",
-        "embedded_full.go",
-        "main.go",
-    ],
+    srcs = _COMMON_SRCS + ["embedded_full.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/sky",
     visibility = ["//visibility:private"],
-    deps = [
-        "//internal/cmd/skycheck",
-        "//internal/cmd/skycov",
-        "//internal/cmd/skydoc",
-        "//internal/cmd/skyfmt",
-        "//internal/cmd/skylint",
-        "//internal/cmd/skyquery",
-        "//internal/cmd/skyrepl",
-        "//internal/cmd/skytest",
-        "//internal/plugins",
-        "//internal/version",
-    ],
+    deps = _COMMON_DEPS + _EMBEDDED_TOOL_DEPS,
 )
 
 go_binary(
