feat(plugins): SDK, examples, and protocol v1.1
Plugin SDK (pkg/skyplugin/):
- Serve() entrypoint handling full protocol
- Environment helpers (WorkspaceRoot, OutputFormat, etc.)
- Output formatting with JSON/text support
- Testing utilities (MockEnv, CaptureOutput)

Protocol v1.1:
- New env vars: SKY_WORKSPACE_ROOT, SKY_CONFIG_DIR,
  SKY_OUTPUT_FORMAT, SKY_NO_COLOR, SKY_VERBOSE
- Workspace detection (searches for .sky.yaml/.git)

Example plugins (examples/plugins/):
- hello-native: Minimal native Go plugin
- hello-wasm: TinyGo-compatible WASM plugin
- star-counter: Real plugin using buildtools
- custom-lint: Custom lint rules (no-print, max-params)

Documentation:
- Updated PLUGIN_PROTOCOL.md to v1.1
- Added SDK reference to PLUGINS.md
- 8 new website pages (quick-start, protocol, native,
  wasm, sdk, testing, publishing)

Also fixes sky_full build (missing _COMMON_SRCS).

--- a/cmd/sky/BUILD.bazel
+++ b/cmd/sky/BUILD.bazel
@@ -25,10 +25,17 @@ _EMBEDDED_TOOL_DEPS = [
 # Minimal build - no embedded tools
 go_library(
     name = "sky_lib",
-    srcs = _COMMON_SRCS + ["embedded_minimal.go"],
+    srcs = [
+        "embedded.go",
+        "embedded_minimal.go",
+        "main.go",
+    ],
     importpath = "github.com/albertocavalcante/sky/cmd/sky",
     visibility = ["//visibility:private"],
-    deps = _COMMON_DEPS,
+    deps = [
+        "//internal/plugins",
+        "//internal/version",
+    ],
 )
 
 go_binary(
